# bench-cli-demo

./: README.md  pyproject.toml
bench_cli_demo/: hooks.py  modules.txt
bench_cli_demo/commands/: __init__.py
bench_cli_demo/commands/custom_commands/: arguments.py  db.py  group.py  hello_world.py
bench_cli_demo/commands/importer/: __init__.py  db.py  site.py
bench_cli_demo/commands/importer/helpers/: delete.py  utils.py
bench_cli_demo/commands/importer/job_applicant_import/: interview_round.py  job_applicant.py  job_opening.py
bench_cli_demo/commands/migration/: __init__.py
bench_cli_demo/commands/migration/job_applicant_migration/: job_applicant.py
