[project]
name = "bench_cli_demo"
authors = [
    { name = "zeel", email = "zeelprajapati321@gmail.com"}
]
description = "The app includes information on how to create custom commands in bench"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    "rich~=10.0.0"
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"
